        - Bump HTTP::Request::AsCGI dependency to avoid broken version (t0m)
        - Bump Moose dependency to latest version to fix metaclass
          incompatibility issues in some cases. (t0m)
        - Additional tests for setup_stats method. (t0m)
        - Fix log levels in Catalyst::Log to be properly additive. (t0m)
        - Fix RT#43375 by sorting results before testing them (t0m)

5.80002 2009-04-22 01:28:36
        - Fix CATALYST_DEBUG and MYAPP_DEBUG environment variables
          turning debuging on if defined, rather than if set.
          They now force debugging on or off, taking precedence over
          configuration in your application. (t0m)
          - Tests for this (t0m)
        - pass replace_constructor to the immutable call to ensure
          applications get a Moose constructor rather than a C::A one
        - Fix issues with restarting the application class due to C3 failures
          on perl 5.10 (t0m)
        - Work around issues in Moose with initialization order of multiple
          levels of non-Moose classes inheriting from a Moose class (t0m)
          - Test for this
        - Add backwards compatibility method for Catalyst::Log->body, which
          has been made private (t0m)
        - Fix so that calling $c->req->parameters(undef) does not flatten
          the request parameters with undef + test (t0m)
        - Fix so that width of table of unattached actions for debugging
          ::DispatchType::Chained varies according to your terminal width
          (Oleg Kostyuk)
        - Fix warning message about linearized @ISA in Catalyst::Component
          (Emanuele Zeppieri)
        - Require MX::MethodAttributes 0.06 to avoid issues with saying
          use base 'Catalyst::Controller'; use Moose; losing actions (t0m)
        - Fix all of t0m's typos in ::Upgrading and ::Delta (hobbs)

5.80001 2009-04-18 22:18
        - Don't inline the constructor for Catalyst::Log to avoid a